force-app/main/default/objects/Application_News__c/Application_News__c.object-meta.xml
<CustomObject>
    <description>The sobject holds data about application critical updates, general news &amp; improvements.</description>
    <label>Application News</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>