force-app/main/default/objects/Application_News__c/listViews/All_News.listView-meta.xml
<ListView>
    <fullName>All_News</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Level__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All News</label>
    <sharedTo>
        <group>Administration</group>
    </sharedTo>
</ListView>